# DNS-CLAW

./: .clang-format  .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  generate_certs.sh  mise.toml  setup.sh
.github/workflows/: ci.yml
include/: base32.h  base64.h  config.h  crypto.h  dns_proto.h  protocol.h
include/client/: protocol.h  render.h  spinner.h  ui.h
include/server/: handler.h  llm.h  log.h  session.h  transport.h
src/client/: main.c  protocol.c  render.c  spinner.c  ui.c
src/common/: base32.c  base64.c  config.c  crypto.c  dns_proto.c
src/server/: handler.c  llm.c  log.c  main.c  session.c  transport.c
tests/: test_base32.c  test_base64.c  test_crypto.c  test_dns_proto.c  test_integration.c
web/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/sessions/: route.ts
web/components/: Chat.tsx  CodeBlock.tsx  Input.tsx  Markdown.tsx  Message.tsx  Sidebar.tsx
web/lib/: base32.ts  crypto.ts  dns.ts  protocol.ts  store.ts  transport.ts  types.ts
web/lib/__tests__/: base32.test.ts  crypto.test.ts  dns.test.ts  protocol.test.ts  transport.test.ts
